Fix media queries and content overflow bugs

--- a/assets/src/layout/_skills.css
+++ b/assets/src/layout/_skills.css
@@ -3,7 +3,7 @@
 .skills {
   display: flex;
   background: var(--color-primary);
-  height: 100vh;
+  min-height: 100vh;
   background-image: url("./img/skills-img.png");
   background-repeat: no-repeat;
   background-position: left;
@@ -19,7 +19,7 @@
     @media only screen and (min-width: 600px) {
       align-items: flex-start;
     }
-    @media only screen and (min-width: 601px) and (max-width: 1120px) {
+    @media only screen and (min-width: 600px) and (max-width: 1180px) {
       margin-left: 4rem;
     }
     /* skill */
